--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,14 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'com.github.harshkanjariya:HKUtils:1.1.7'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.github.harshkanjariya:HKUtils:1.1.21'
     implementation 'com.otaliastudios:zoomlayout:1.8.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
